--- a/pod/code/trait.Encode.html
+++ b/pod/code/trait.Encode.html
@@ -45,11 +45,13 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-1064' class='srclink' href='../../src/pod/code.rs.html#37-46' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-1275' class='srclink' href='../../src/pod/code.rs.html#37-66' title='goto source code'>[src]</a></span></h1>
 <pre class='rust trait'>pub trait Encode {
     type Options: <a class='trait' href='http://doc.rust-lang.org/nightly/core/default/trait.Default.html' title='core::default::Default'>Default</a>;
     fn <a href='#method.encode' class='fnname'>encode</a>&lt;W: <a class='trait' href='http://doc.rust-lang.org/nightly/std/io/trait.Write.html' title='std::io::Write'>Write</a>&gt;(&amp;self, w: &amp;mut W) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/std/io/error/type.Result.html' title='std::io::error::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>&gt; { ... }
     fn <a href='#method.encode_options' class='fnname'>encode_options</a>&lt;W: <a class='trait' href='http://doc.rust-lang.org/nightly/std/io/trait.Write.html' title='std::io::Write'>Write</a>&gt;(&amp;self, w: &amp;mut W, _options: Self::<a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Options</a>) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/std/io/error/type.Result.html' title='std::io::error::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>&gt; { ... }
+    fn <a href='#method.encode_vec' class='fnname'>encode_vec</a>(&amp;self) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/std/io/error/type.Result.html' title='std::io::error::Result'>Result</a>&lt;<a class='struct' href='http://doc.rust-lang.org/nightly/collections/vec/struct.Vec.html' title='collections::vec::Vec'>Vec</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a>&gt;&gt; { ... }
+    fn <a href='#method.encode_vec_options' class='fnname'>encode_vec_options</a>(&amp;self, options: Self::<a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Options</a>) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/std/io/error/type.Result.html' title='std::io::error::Result'>Result</a>&lt;<a class='struct' href='http://doc.rust-lang.org/nightly/collections/vec/struct.Vec.html' title='collections::vec::Vec'>Vec</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a>&gt;&gt; { ... }
 }</pre><div class='docblock'><p>Encodes an value&#39;s binary representation to a <code>Write</code>.</p>
 
 <p>Note that this is not serialization, and some data may be lost.
@@ -88,16 +90,21 @@ control the byte order.</p>
             <div class='methods'>
         <h3 id='method.encode' class='method stab '><code>fn <a href='#method.encode' class='fnname'>encode</a>&lt;W: <a class='trait' href='http://doc.rust-lang.org/nightly/std/io/trait.Write.html' title='std::io::Write'>Write</a>&gt;(&amp;self, w: &amp;mut W) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/std/io/error/type.Result.html' title='std::io::error::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>&gt;</code></h3><div class='docblock'><p>Encodes to the <code>Write</code> with default options</p>
 </div><h3 id='method.encode_options' class='method stab '><code>fn <a href='#method.encode_options' class='fnname'>encode_options</a>&lt;W: <a class='trait' href='http://doc.rust-lang.org/nightly/std/io/trait.Write.html' title='std::io::Write'>Write</a>&gt;(&amp;self, w: &amp;mut W, _options: Self::<a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Options</a>) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/std/io/error/type.Result.html' title='std::io::error::Result'>Result</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>&gt;</code></h3><div class='docblock'><p>Encodes to the <code>Write</code> with the provided options</p>
+</div><h3 id='method.encode_vec' class='method stab '><code>fn <a href='#method.encode_vec' class='fnname'>encode_vec</a>(&amp;self) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/std/io/error/type.Result.html' title='std::io::error::Result'>Result</a>&lt;<a class='struct' href='http://doc.rust-lang.org/nightly/collections/vec/struct.Vec.html' title='collections::vec::Vec'>Vec</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a>&gt;&gt;</code></h3><div class='docblock'><p>Encodes to a new byte vector</p>
+</div><h3 id='method.encode_vec_options' class='method stab '><code>fn <a href='#method.encode_vec_options' class='fnname'>encode_vec_options</a>(&amp;self, options: Self::<a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Options</a>) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/std/io/error/type.Result.html' title='std::io::error::Result'>Result</a>&lt;<a class='struct' href='http://doc.rust-lang.org/nightly/collections/vec/struct.Vec.html' title='collections::vec::Vec'>Vec</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a>&gt;&gt;</code></h3><div class='docblock'><p>Encodes to a new byte vector with the provided options</p>
 </div></div>
         <h2 id='implementors'>Implementors</h2>
         <ul class='item-list' id='implementors-list'>
     <li><code>impl&lt;T: <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a>&gt; <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for <a class='enum' href='http://doc.rust-lang.org/nightly/core/option/enum.Option.html' title='core::option::Option'>Option</a>&lt;T&gt;</code></li>
 <li><code>impl <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for <a class='struct' href='http://doc.rust-lang.org/nightly/collections/string/struct.String.html' title='collections::string::String'>String</a></code></li>
 <li><code>impl <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for <a href='http://doc.rust-lang.org/nightly/std/primitive.str.html'>str</a></code></li>
+<li><code>impl&lt;'a&gt; <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for &amp;'a <a href='http://doc.rust-lang.org/nightly/std/primitive.str.html'>str</a></code></li>
 <li><code>impl <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for <a class='struct' href='http://doc.rust-lang.org/nightly/std/ffi/c_str/struct.CString.html' title='std::ffi::c_str::CString'>CString</a></code></li>
 <li><code>impl <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for <a class='struct' href='http://doc.rust-lang.org/nightly/std/ffi/c_str/struct.CStr.html' title='std::ffi::c_str::CStr'>CStr</a></code></li>
+<li><code>impl&lt;'a&gt; <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for &amp;'a <a class='struct' href='http://doc.rust-lang.org/nightly/std/ffi/c_str/struct.CStr.html' title='std::ffi::c_str::CStr'>CStr</a></code></li>
 <li><code>impl&lt;T: <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a>&gt; <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for <a class='struct' href='http://doc.rust-lang.org/nightly/collections/vec/struct.Vec.html' title='collections::vec::Vec'>Vec</a>&lt;T&gt; <span class='where'>where T::Options: <a class='trait' href='http://doc.rust-lang.org/nightly/core/clone/trait.Clone.html' title='core::clone::Clone'>Clone</a></span></code></li>
 <li><code>impl&lt;T: <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a>&gt; <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for <a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>[T]</a> <span class='where'>where T::Options: <a class='trait' href='http://doc.rust-lang.org/nightly/core/clone/trait.Clone.html' title='core::clone::Clone'>Clone</a></span></code></li>
+<li><code>impl&lt;'a, T: <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a>&gt; <a class='trait' href='../../pod/code/trait.Encode.html' title='pod::code::Encode'>Encode</a> for <a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>&amp;'a [</a>T<a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>]</a> <span class='where'>where T::Options: <a class='trait' href='http://doc.rust-lang.org/nightly/core/clone/trait.Clone.html' title='core::clone::Clone'>Clone</a></span></code></li>
 </ul><script type="text/javascript" async
                               src="../../implementors/pod/code/trait.Encode.js">
                       </script></section>
@@ -106,37 +113,44 @@ control the byte order.</p>
     <section class="footer"></section>
 
     <div id="help" class="hidden">
-        <div class="shortcuts">
-            <h1>Keyboard Shortcuts</h1>
-            <dl>
-                <dt>?</dt>
-                <dd>Show this help dialog</dd>
-                <dt>S</dt>
-                <dd>Focus the search field</dd>
-                <dt>&larrb;</dt>
-                <dd>Move up in search results</dd>
-                <dt>&rarrb;</dt>
-                <dd>Move down in search results</dd>
-                <dt>&#9166;</dt>
-                <dd>Go to active search result</dd>
-            </dl>
-        </div>
-        <div class="infos">
-            <h1>Search Tricks</h1>
-            <p>
-                Prefix searches with a type followed by a colon (e.g.
-                <code>fn:</code>) to restrict the search to a given type.
-            </p>
-            <p>
-                Accepted types are: <code>fn</code>, <code>mod</code>,
-                <code>struct</code>, <code>enum</code>,
-                <code>trait</code>, <code>typedef</code> (or
-                <code>tdef</code>).
-            </p>
-            <p>
-                Search functions by type signature (e.g.
-                <code>vec -> usize</code>)
-            </p>
+        <div>
+            <div class="shortcuts">
+                <h1>Keyboard Shortcuts</h1>
+
+                <dl>
+                    <dt>?</dt>
+                    <dd>Show this help dialog</dd>
+                    <dt>S</dt>
+                    <dd>Focus the search field</dd>
+                    <dt>&larrb;</dt>
+                    <dd>Move up in search results</dd>
+                    <dt>&rarrb;</dt>
+                    <dd>Move down in search results</dd>
+                    <dt>&#9166;</dt>
+                    <dd>Go to active search result</dd>
+                </dl>
+            </div>
+
+            <div class="infos">
+                <h1>Search Tricks</h1>
+
+                <p>
+                    Prefix searches with a type followed by a colon (e.g.
+                    <code>fn:</code>) to restrict the search to a given type.
+                </p>
+
+                <p>
+                    Accepted types are: <code>fn</code>, <code>mod</code>,
+                    <code>struct</code>, <code>enum</code>,
+                    <code>trait</code>, <code>typedef</code> (or
+                    <code>tdef</code>).
+                </p>
+
+                <p>
+                    Search functions by type signature (e.g.
+                    <code>vec -> usize</code>)
+                </p>
+            </div>
         </div>
     </div>
 
