--- a/pod/trait.PodExt.html
+++ b/pod/trait.PodExt.html
@@ -45,7 +45,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-20' class='srclink' href='../src/pod/pod.rs.html#26-83' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-22' class='srclink' href='../src/pod/pod.rs.html#26-107' title='goto source code'>[src]</a></span></h1>
 <pre class='rust trait'>pub trait PodExt: <a class='trait' href='http://doc.rust-lang.org/nightly/core/marker/trait.Sized.html' title='core::marker::Sized'>Sized</a> {
     fn <a href='#method.as_slice' class='fnname'>as_slice</a>&lt;'a&gt;(&amp;'a self) -&gt; <a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>&amp;'a [</a><a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a><a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>]</a> { ... }
     fn <a href='#method.mut_slice' class='fnname'>mut_slice</a>&lt;'a&gt;(&amp;'a mut self) -&gt; <a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>&amp;'a mut [</a><a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a><a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>]</a> { ... }
@@ -53,6 +53,8 @@
     fn <a href='#method.from_mut_slice' class='fnname'>from_mut_slice</a>&lt;'a&gt;(slice: <a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>&amp;'a mut [</a><a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a><a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>]</a>) -&gt; &amp;'a mut Self { ... }
     fn <a href='#method.from_vec' class='fnname'>from_vec</a>(vec: <a class='struct' href='http://doc.rust-lang.org/nightly/collections/vec/struct.Vec.html' title='collections::vec::Vec'>Vec</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a>&gt;) -&gt; <a class='struct' href='http://doc.rust-lang.org/nightly/alloc/boxed/struct.Box.html' title='alloc::boxed::Box'>Box</a>&lt;Self&gt; { ... }
     fn <a href='#method.from_box' class='fnname'>from_box</a>(slice: <a class='struct' href='http://doc.rust-lang.org/nightly/alloc/boxed/struct.Box.html' title='alloc::boxed::Box'>Box</a>&lt;<a href='http://doc.rust-lang.org/nightly/std/primitive.slice.html'>[<a href='http://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a>]</a>&gt;) -&gt; <a class='struct' href='http://doc.rust-lang.org/nightly/alloc/boxed/struct.Box.html' title='alloc::boxed::Box'>Box</a>&lt;Self&gt; { ... }
+    fn <a href='#method.map' class='fnname'>map</a>&lt;'a, T: <a class='trait' href='../pod/trait.PodType.html' title='pod::PodType'>PodType</a>&gt;(&amp;'a self) -&gt; &amp;'a T { ... }
+    fn <a href='#method.map_mut' class='fnname'>map_mut</a>&lt;'a, T: <a class='trait' href='../pod/trait.PodType.html' title='pod::PodType'>PodType</a>&gt;(&amp;'a mut self) -&gt; &amp;'a mut T { ... }
 }</pre><div class='docblock'><p>Helper methods for converting Plain Old Data types to/from byte slices and vectors</p>
 </div>
             <h2 id='provided-methods'>Provided Methods</h2>
@@ -79,6 +81,16 @@
 <h1 id="panics" class='section-header'><a
                            href="#panics">Panics</a></h1>
 <p>Panics if <code>slice.len()</code> is not the same as the type&#39;s size</p>
+</div><h3 id='method.map' class='method stab '><code>fn <a href='#method.map' class='fnname'>map</a>&lt;'a, T: <a class='trait' href='../pod/trait.PodType.html' title='pod::PodType'>PodType</a>&gt;(&amp;'a self) -&gt; &amp;'a T</code></h3><div class='docblock'><p>Converts a POD type from one to another of the same size.</p>
+
+<h1 id="panics" class='section-header'><a
+                           href="#panics">Panics</a></h1>
+<p>Panics if the two types are not the same size</p>
+</div><h3 id='method.map_mut' class='method stab '><code>fn <a href='#method.map_mut' class='fnname'>map_mut</a>&lt;'a, T: <a class='trait' href='../pod/trait.PodType.html' title='pod::PodType'>PodType</a>&gt;(&amp;'a mut self) -&gt; &amp;'a mut T</code></h3><div class='docblock'><p>Converts a POD type from one to another of the same size.</p>
+
+<h1 id="panics" class='section-header'><a
+                           href="#panics">Panics</a></h1>
+<p>Panics if the two types are not the same size</p>
 </div></div>
         <h2 id='implementors'>Implementors</h2>
         <ul class='item-list' id='implementors-list'>
@@ -90,37 +102,44 @@
     <section class="footer"></section>
 
     <div id="help" class="hidden">
-        <div class="shortcuts">
-            <h1>Keyboard Shortcuts</h1>
-            <dl>
-                <dt>?</dt>
-                <dd>Show this help dialog</dd>
-                <dt>S</dt>
-                <dd>Focus the search field</dd>
-                <dt>&larrb;</dt>
-                <dd>Move up in search results</dd>
-                <dt>&rarrb;</dt>
-                <dd>Move down in search results</dd>
-                <dt>&#9166;</dt>
-                <dd>Go to active search result</dd>
-            </dl>
-        </div>
-        <div class="infos">
-            <h1>Search Tricks</h1>
-            <p>
-                Prefix searches with a type followed by a colon (e.g.
-                <code>fn:</code>) to restrict the search to a given type.
-            </p>
-            <p>
-                Accepted types are: <code>fn</code>, <code>mod</code>,
-                <code>struct</code>, <code>enum</code>,
-                <code>trait</code>, <code>typedef</code> (or
-                <code>tdef</code>).
-            </p>
-            <p>
-                Search functions by type signature (e.g.
-                <code>vec -> usize</code>)
-            </p>
+        <div>
+            <div class="shortcuts">
+                <h1>Keyboard Shortcuts</h1>
+
+                <dl>
+                    <dt>?</dt>
+                    <dd>Show this help dialog</dd>
+                    <dt>S</dt>
+                    <dd>Focus the search field</dd>
+                    <dt>&larrb;</dt>
+                    <dd>Move up in search results</dd>
+                    <dt>&rarrb;</dt>
+                    <dd>Move down in search results</dd>
+                    <dt>&#9166;</dt>
+                    <dd>Go to active search result</dd>
+                </dl>
+            </div>
+
+            <div class="infos">
+                <h1>Search Tricks</h1>
+
+                <p>
+                    Prefix searches with a type followed by a colon (e.g.
+                    <code>fn:</code>) to restrict the search to a given type.
+                </p>
+
+                <p>
+                    Accepted types are: <code>fn</code>, <code>mod</code>,
+                    <code>struct</code>, <code>enum</code>,
+                    <code>trait</code>, <code>typedef</code> (or
+                    <code>tdef</code>).
+                </p>
+
+                <p>
+                    Search functions by type signature (e.g.
+                    <code>vec -> usize</code>)
+                </p>
+            </div>
         </div>
     </div>
 
